--- a/src/pages/month/Month.css
+++ b/src/pages/month/Month.css
@@ -17,7 +17,7 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        padding-left: 0px;
+        padding-left: 80px;
         height: 50vh;
         margin-top: 60px;
         margin-bottom: 91px;
@@ -27,36 +27,36 @@
 
 @media screen and (max-width:850px) {
     .page-3{
-        width: 90%;
+        width: 100%;
         align-items: center;
         justify-content: center;
-        margin: 1rem ;
+        margin: 3.55rem ;
         height: 50vh;
-        margin-top: 151px;
-
+        margin-top: 110px;
+        margin-left: -35px;
     }
 }
 
 @media screen and (max-width:650px) {
     .page-3{
-        width: 90%;
+        width: 100%;
         align-items: center;
         justify-content: center;
         margin: 1rem ;
         height: 50vh;
         margin-top: 151px;
-
+        margin-left: -45px;
     }
 }
 
 @media screen and (max-width:450px) {
     .page-3{
-        width: 90%;
+        width: 100%;
         align-items: center;
         justify-content: center;
         margin: 1rem ;
         height: 50vh;
         margin-top: 210px;
-
+        margin-left: -45px;
     }
 }
