--- a/src/pages/now/Home.css
+++ b/src/pages/now/Home.css
@@ -32,6 +32,12 @@
     padding: 2rem;
 }
 
+.bottom{
+    width: 100%;
+    display: flex;
+    
+}
+
 @media screen and (max-width:2000px){
     .page{
         width: 100%;
