--- a/src/pages/year/Year.css
+++ b/src/pages/year/Year.css
@@ -1,4 +1,4 @@
-.page-3{
+.page-4{
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -7,7 +7,7 @@
     margin: 0%;
 }
 
-.chart-month-kw{
+.chart-year-kw{
     flex: 1;
     width: 80%;
     display: flex;
@@ -19,7 +19,7 @@
     padding: 2rem;
 }
 
-.chart-month-cost{
+.chart-year-cost{
     flex: 1;
     width: 80%;
     display: flex;
@@ -31,7 +31,7 @@
     padding: 2rem;
 }
 @media screen and (max-width:2000px) {
-    .page-3{
+    .page-4{
         width: 100%;
         margin-top: 0.5rem;
         justify-content:center;
@@ -42,19 +42,19 @@
         /* margin-left: -150px; */
     }
 
-    .chart-month-kw{
+    .chart-year-kw{
         width: 100%;
         padding: 1rem;
     }
 
-    .chart-month-cost{
+    .chart-year-cost{
         width: 100%;
         padding: 1rem;
     }
 }
 
 @media screen and (max-width:1150px) {
-    .page-3{
+    .page-4{
         width: 100%;
         align-items: center;
         justify-content: center;
@@ -67,7 +67,7 @@
 }
 
 @media screen and (max-width:850px) {
-    .page-3{
+    .page-4{
         width: 100%;
         align-items: center;
         justify-content: center;
@@ -79,7 +79,7 @@
 }
 
 @media screen and (max-width:650px) {
-    .page-3{
+    .page-4{
         width: 100%;
         flex-direction: column;
         align-items: center;
@@ -89,7 +89,7 @@
         margin-top: -10px;
         margin-left: -10px;
     }
-    .chart-month-kw{
+    .chart-year-kw{
         flex: 1;
         width: 100%;
         display: flex;
@@ -100,7 +100,7 @@
         padding: 0rem;
 }
 
-    .chart-month-cost{
+    .chart-year-cost{
         flex: 1;
         width: 100%;
         display: flex;
@@ -113,7 +113,7 @@
 }
 
 @media screen and (max-width:450px) {
-    .page-3{
+    .page-4{
         width: 100%;
         align-items: center;
         justify-content: center;
@@ -124,7 +124,7 @@
         margin-bottom: 7.8px;
     }
 
-    .chart-month-kw{
+    .chart-year-kw{
         flex: 1;
         width: 400px;
         display: flex;
@@ -134,7 +134,7 @@
         padding: 2rem;
     }
     
-    .chart-month-cost{
+    .chart-year-cost{
         flex: 1;
         width:400px;
         display: flex;
