--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -55,6 +55,11 @@
     }
 
     .nav-bar-links li{
-        margin:0.5rem 0.5rem;
+        margin:0.5rem 0.3rem;
     }
+
+    /* .btn1{
+        width: 70px;
+        font-size: 10%;
+    } */
 }
