--- a/src/pages/week/Week.css
+++ b/src/pages/week/Week.css
@@ -1,59 +1,175 @@
+.page-2{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    /* padding-left: 270px; */
+    height: 68.3vh;
+    margin: 0%;
+}
+
+.chart-week-kw{
+    flex: 1;
+    width: 80%;
+    display: flex;
+    /* position: absolute; */
+    justify-content: flex-end;
+    align-items: center;
+    margin: 0%;
+    flex-direction: column;
+    padding: 5rem;
+}
+
+.chart-week-cost{
+    flex: 1;
+    width: 80%;
+    display: flex;
+    /* position: absolute; */
+    justify-content: flex-end;
+    align-items: center;
+    margin: 0%;
+    flex-direction: column;
+    padding: 5rem;
+}
+
 @media screen and (max-width:2000px){
     .page-2{
-        width: 80%;
+        width: 100%;
+        margin-top: 0.5rem;
+        justify-content:center;
         align-items: center;
-        justify-content: center;
-        padding-left: 270px;
-        height: 71vh;
-        margin: 0%;
+        display: flex;
+        margin-bottom: 1.19rem;
+        padding: 1rem;
+        /* margin-left: -150px; */
+    }
+
+    .chart-week-kw{
+        width: 500px;
+        padding: 1rem;
+    }
+
+    .chart-week-cost{
+        width: 500px;
+        padding: 1rem;
     }
 }
 
 @media screen and (max-width:1150px){
     .page-2{
-        width: 90%;
+        width: 100%;
         align-items: center;
         justify-content: center;
         height: 50vh;
-        margin: 1rem;
+        margin: 0rem;
         margin-top: 90px;
         margin-bottom: 3.8rem;
-        padding-left: 65px;
+        padding: 50px;
     }
+
+    .chart-week-kw{
+        flex: 1;
+        width: 100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 1rem;
+}
+
+    .chart-week-cost{
+        flex: 1;
+        width: 100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 1rem;
+}
 }
 
 @media screen and (max-width:850px){
     .page-2{
-        width: 90%;
+        width: 100%;
         align-items: center;
         justify-content: center;
-        height: 50vh;
-        margin: 1rem;
-        margin-top: 151px;
-        padding-left: -10px;
+        height: 71.4vh;
+        margin: 0rem;
+        margin-top: 10px;
     }
 }
 
 @media screen and (max-width:650px){
     .page-2{
         width: 100%;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 50vh;
+        height: 72vh;
         margin: 1rem;
-        margin-top: 151px;
-        margin-left: -30px;
+        margin-top: -10px;
+        margin-left: 0px;
     }
+    .chart-week-kw{
+        flex: 1;
+        width: 100%;
+        display: flex;
+
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+
+        padding: 0rem;
+}
+
+    .chart-week-cost{
+        flex: 1;
+        width: 100%;
+        display: flex;
+        /* position: absolute; */
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 0rem;
+}
 }
 
 @media screen and (max-width:450px){
     .page-2{
-        width: 90%;
+        width: 100%;
         align-items: center;
         justify-content: center;
-        height: 50vh;
+        height: 81vh;
         margin: 1rem;
-        margin-top: 210px;
-        margin-left: -15px;
+        margin-top: -50px;
+        margin-left: 0px;
+        margin-bottom: 20px;
     }
+
+    .chart-week-kw{
+        flex: 1;
+        width: 380px;
+        display: flex;
+
+        justify-content: center;
+        align-items: center;
+        margin: 0%;
+
+        padding: 1rem;
+}
+
+    .chart-week-cost{
+        flex: 1;
+        width: 380px;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 1rem;
+}
 }
