create device page and settingpage

--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -51,7 +51,7 @@
         justify-content: center;
         align-items: center;
         list-style: none;
-        margin-right: 25px;
+        margin-left: -5px;
     }
 
     .nav-bar-links li{
