service page connect

--- a/src/pages/device/DeviceInfo.css
+++ b/src/pages/device/DeviceInfo.css
@@ -10,3 +10,15 @@
     background-color: rgb(186, 153, 217);
     color: black;
 }
+
+@media screen and (max-width:650px) {
+    .wrapper2{
+        height: 82.3vh;
+    }
+}
+
+@media screen and (max-width:450px) {
+    .wrapper2{
+        height: 84.7vh;
+    }
+}
