--- a/src/pages/now/Hertz.css
+++ b/src/pages/now/Hertz.css
@@ -30,7 +30,18 @@
 
 @media screen and (max-width:450px){
     .hz p{
-        font-size: 15px;
+        font-size: 14px;
         font-weight: 600; 
+        justify-content: center;
+        align-items: center;
+        padding: 2px;
+    }
+
+    .hz{
+        border: 1px solid;
+        height: fit-content;
+        align-items: center;
+        justify-content: center;
+        display: flex;
     }
 }
