--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -9,6 +9,30 @@
     padding: 0rem 2rem;
     font-size: 25px;
 }
+
+.app__navbar-login{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.app__navbar-login a{
+    margin: 0 1rem;
+    text-decoration: none;
+    transition: 0.5s ease;
+    color: black;
+    list-style: none;
+}
+
+.app__navbar-login a:hover{
+    border-bottom: 1px solid white;
+}
+
+.app__navbar-login div{
+    width: 1px;
+    height: 30px;
+    background-color: white;
+}
 /* 
 @media screen and (max-width:850px) {
     .title{
