--- a/src/pages/now/Hertz.css
+++ b/src/pages/now/Hertz.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
+    margin-top: 20px;
 }
 
 .hz p{
@@ -12,7 +13,7 @@
     align-items: center;
     justify-content: center;
     width: fit-content;
-    margin: -10px;
+    margin: -15px;
     display: flex;
 }
 
