--- a/src/pages/settings/Service.css
+++ b/src/pages/settings/Service.css
@@ -68,7 +68,10 @@
     .wrapper3{
         height: 64vh;
     }
+    .wrapper4{
+        height: 64vh;
+    }
     .connection{
-        margin-top: -440px;
+        margin-top: -110px;
     }
 }
