--- a/src/pages/userlist/Userlist.css
+++ b/src/pages/userlist/Userlist.css
@@ -1,3 +1,11 @@
 .body{
+    height: 81.18vh;
+    /* align-items: center; */
+    justify-content: center;
+    display: flex;
+    margin-top: 10px;
+}
+
+.table1{
     background-color: rgb(186, 153, 217);
 }
