--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -41,10 +41,14 @@
     height: 30px;
     background-color: white;
 }
-/* 
-@media screen and (max-width:850px) {
+
+@media screen and (max-width:450px) {
     .title{
-        padding: 0rem 2rem;
+        padding: 0rem 1rem;
+        font-size: 20px;
+        margin-top: 13px;
     }
-} */
+
+    
+}
 
