--- a/src/pages/year/Year.css
+++ b/src/pages/year/Year.css
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: center;
     /* padding-left: 270px; */
-    height: 68.3vh;
+    background-color:#191970;
+    height: 82.54vh;
     margin: 0%;
 }
 
@@ -33,11 +34,11 @@
 @media screen and (max-width:2000px) {
     .page-4{
         width: 100%;
-        margin-top: 0.5rem;
+        margin-top: 0;
         justify-content:center;
         align-items: center;
         display: flex;
-        margin-bottom: 1.19rem;
+        margin-bottom: 0;
         padding: 4rem;
         /* margin-left: -150px; */
     }
