--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,9 +1,16 @@
 
 .nav-bar{
-    width: 100%;
+    width: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #F5F5DC;
+    border-radius: 50px;
+    margin-left: 250px;
+    margin-top: 10px;
+    height: 40px;
+    box-shadow: 0px 2px 5px -2px #333;
+    position: absolute;
 }
 
 .nav-bar-links{
@@ -11,13 +18,33 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+    margin-top: 15px;
+    margin-left: -33px;
+    cursor: pointer;
+    text-align: center;
+    
 }
 
 .nav-bar-links li{
-    margin: 1rem 3rem;
+    margin: 20px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    text-align: center;
     cursor: pointer;
+    width: 64px;
+    text-decoration: none;
+    box-shadow: 0px 2px 5px -2px #333;
+    /* text-shadow: 0px -1px #333; */
+    border-radius: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
+
+.nav-bar-links a{
+    text-decoration: none;
+}
+
+/* .nav-bar-links li{ */
 
 @media screen and (max-width:850px){
     .nav-bar-links{
@@ -48,17 +75,44 @@
 }
 
 @media screen and (max-width:450px){
-    .nav-bar-links{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        list-style: none;
-        margin-left: -5px;
-    }
+    
+.nav-bar{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F5F5DC;
+    border-radius: 50px;
+    margin-left: 18px;
+    margin-top: 10px;
+    height: 40px;
+    box-shadow: 0px 2px 5px -2px #333;
+}
 
-    .nav-bar-links li{
-        margin:0.5rem 0.3rem;
-    }
+.nav-bar-links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin-top: 15px;
+    margin-left: -7px;
+    cursor: pointer;
+}
+
+.nav-bar-links li{
+    margin: 2px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 53px;
+    font-size: 12px;
+    box-shadow: 0px 2px 5px -2px #333;
+    /* text-shadow: 0px -1px #333; */
+    border-radius: 50px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
 
     
 }
