--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -7,12 +7,12 @@
     padding: 1rem 2rem;
 }
 
-.title{
+/* .title{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+    
+} */
 
 .title p{
     font-size: 25px;
@@ -20,6 +20,7 @@
     justify-content: center;
     align-items: center;
     display: flex;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .app__navbar-login{
