--- a/src/pages/week/Week.css
+++ b/src/pages/week/Week.css
@@ -3,8 +3,9 @@
     align-items: center;
     justify-content: center;
     /* padding-left: 270px; */
-    height: 68.3vh;
+    height: 82.54vh;
     margin: 0%;
+    background-color:#191970;
 }
 
 .chart-week-kw{
@@ -34,11 +35,11 @@
 @media screen and (max-width:2000px){
     .page-2{
         width: 100%;
-        margin-top: 0.5rem;
+        margin-top: 0%;
         justify-content:center;
         align-items: center;
         display: flex;
-        margin-bottom: 1.19rem;
+        margin-bottom: 0%;
         padding: 1rem;
         /* margin-left: -150px; */
     }
