--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background:  rgb(186, 153, 217);
+    /* background:  rgb(186, 153, 217); */
     padding: 1rem 2rem;
 }
 
@@ -18,6 +18,7 @@
     font-size: 25px;
     margin-left: 20px;
     justify-content: center;
+    color: #191970;
     align-items: center;
     display: flex;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -33,7 +34,7 @@
     margin: 0 1rem;
     text-decoration: none;
     transition: 0.5s ease;
-    color: black;
+    color: #030349;
     list-style: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -81,7 +82,7 @@
 }
 
 .app__navbar-smaillscreen-links a{
-    color: black;
+    color: #191970;
     text-decoration: none;
 }
 
@@ -106,13 +107,17 @@
     }
 
     .app__navbar-smallscreen{
-        display: flex;
+        display: none;
     }
 }
 
 @media screen and (max-width:850px) {
     .app__navbar-login{
         display: none;
+    }
+
+    .app__navbar-smallscreen{
+        display: flex;
     }
 
     .app__navbar-smallscreen .hammenu{
