--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,6 +1,6 @@
 .wrapper{
     height: 100vh;
-    background-color: rgb(186, 153, 217);
+    background-color:#191970;
 }
 .login{
     width: 330px;
