--- a/src/pages/now/Home.css
+++ b/src/pages/now/Home.css
@@ -6,7 +6,7 @@
     display: flex;
     background-color:#191970;
     /* position: absolute; */
-    height: 64.48vh;
+    height: 64.19vh;
 }
 
 .chart-now-kw{
@@ -18,8 +18,8 @@
     align-items: center;
     margin: 0%;
     flex-direction: column;
-    padding: 1rem;
-    margin-top: 40px;
+    padding: 0rem;
+    margin-top: 0px;
 }
 
 .chart-now-cost{
@@ -31,7 +31,8 @@
     align-items: center;
     margin: 0%;
     flex-direction: column;
-    padding: 1rem;
+    padding: 0rem;
+    margin-top: 0px;
 }
 
 /* .bottom{
@@ -45,7 +46,7 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
+    margin-top: 0px;
     /* background-color:yellow; */
     background-color:#191970;
     /* position: absolute; */
@@ -60,20 +61,20 @@
 } */
 
 .page-bottom div{
-    width: 198px;
-    padding: 1rem;
+    width: 200px;
+    padding: 2rem;
     /* margin-top: -50px; */
 }
 
 
-.bottom-3{
-    width: 50px;
-    margin-top: 50px;
+/* .bottom-3{ */
+    /* width: 50px;
+    margin-top: 0px; */
     /* justify-content: space-between;
     align-items: center;
     flex-direction: column; */
     
-}
+/* } */
 
 /* .bottom-3 .box1{
     flex: 1;
@@ -92,21 +93,23 @@
 @media screen and (max-width:2000px){
     .page{
         width: 100%;
-        margin-top: -1rem;
+        margin-top: 0rem;
         justify-content:center;
         align-items: center;
         display: flex;
-        margin-bottom: -3rem;
+        margin-bottom: -4rem;
     }
 
     .chart-now-kw{
-        height: 400px;
+        height: 350px;
         padding: 2rem;
+        margin-top: 40px;
     }
 
     .chart-now-cost{
-        height: 400px;
+        height: 350px;
         padding: 2rem;
+        margin-top: 40px;
     }
 
     .bottom-3{
@@ -191,26 +194,26 @@
 
 @media screen and (max-width:650px){
     .page{
-        width: 80%;
+        width: 100%;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
         margin: 0%;
-        margin-left: 50px;
-        height: 53.5vh;
+        margin-left: 0px;
+        height: 100.5vh;
     }
 
     .chart-now-cost{
-        width: 80%;
-        margin-top: -90px;
+        width: 400px;
+        margin-top: 0px;
         align-items: center;
         justify-content: center;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
     }
 
     .chart-now-kw{
-        margin-top: -60px;
-        width: 80%;
+        margin-top: 50px;
+        width: 400px;
         align-items: center;
         justify-content: center;
     }
@@ -221,52 +224,57 @@
         justify-content: center;
         align-items: center;
         margin: 0%;
-        margin-top: 20px;
+        margin-top: 0px;
+        flex-direction: column;
+        
     }
     
     .page-bottom div{
-        width: 90px;
-        padding: 8px;
+        width: 100%;
+        margin-top: 20px;
         margin-bottom: 10px;
+        padding: 5px;
     }
 
     .page-bottom .vol{
-        width: 25%;
+        width: 200px;
+        flex: 1;
     }
 
-    .page-bottom .bottom-3{
-        margin-top: 16px;
+    .page-bottom .pow{
+        width: 200px;
+        flex: 1;
     }
+
+    /* .page-bottom .bottom-3{
+        margin-top: 16px;
+    } */
 }
 
 @media screen and (max-width:450px){
     .page{
-        width: 80%;
+        width: 100%;
         flex-direction: column;
         align-items: center;
-        justify-content:center;
+        justify-content: space-between;
         margin: 0%;
-        margin-left: 40px;
-        height: 60vh;
-        padding: 0%;
+        margin-left: 0px;
+        height: 98vh;
     }
 
     .chart-now-cost{
-        width: 80%;
-        margin-top:0;
+        width: 400px;
+        margin-top: -50px;
         align-items: center;
         justify-content: center;
-        margin-bottom: 0;
-        padding: 10px;
+        margin-bottom: 0px;
     }
 
     .chart-now-kw{
-        margin-top: 0;
-        width: 80%;
+        margin-top: 0px;
+        width: 400px;
         align-items: center;
         justify-content: center;
-        margin-bottom: 0;
-        padding: 10px;
     }
 
     .page-bottom{
@@ -274,18 +282,27 @@
         width: 100%;
         justify-content: center;
         align-items: center;
-        margin-bottom: 10px;
-        height: 17.1vh;
+        margin: 0%;
+        margin-top: 0px;
+        flex-direction: column;
+        
     }
     
     .page-bottom div{
-        width: 80px;
-        padding: 5px;
-        margin-bottom:0;
+        width: 100%;
+        margin-top: 5px;
+        margin-bottom: 10px;
+        padding: 0px;
     }
 
-    /* .bottom-3{
-        margin-top: 0;
-    } */
+    .page-bottom .vol{
+        width: 180px;
+        flex: 1;
+    }
+
+    .page-bottom .pow{
+        width: 180px;
+        flex: 1;
+    }
 }
 
