--- a/src/pages/settings/Service.css
+++ b/src/pages/settings/Service.css
@@ -1,10 +1,10 @@
 .wrapper3{
-    height: 72.84vh;
+    height: 82.54vh;
     background-color:#191970;
 }
 
 .wrapper4{
-    height: 72.84vh;
+    height: 82.54vh;
     background-color:#191970;
 }
 
@@ -41,12 +41,18 @@
 
 
 .tab{
-    width: 100%;
+    width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    background-color: #F5F5DC;
+    border-radius: 50px;
+    margin-left: 590px;
+    margin-top: 10px;
+    height: 40px;
+    box-shadow: 0px 2px 5px -2px #333;
+    position: absolute;
+    
 }
 
 .tab-links{
@@ -54,32 +60,125 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+    margin-top: -1px;
+    margin-left: 20px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 50%;
 }
 
 .tab-links li{
-    margin: 1rem 3rem;
+    margin: 20px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    text-align: center;
     cursor: pointer;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 70px;
+    height: 35px;
+    text-decoration: none;
+    box-shadow: 0px 2px 5px -2px #333;
+    /* text-shadow: 0px -1px #333; */
+    /* border-radius: 50%; */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
+@media screen and (max-width:1150px){
+    .wrapper3{
+        height: 82.2vh;
+    }
+    .wrapper4{
+        height: 82.2vh;
+    }
+
+    .tab{
+        margin-left: 325px;
+        width: 30%;
+        position: absolute;
+    }
+}
 
 @media screen and (max-width:850px){
     .wrapper3{
-        height: 65.6vh;
+        height: 82.2vh;
     }
     .wrapper4{
-        height: 65.6vh;
+        height: 82.2vh;
+    }
+
+    .tab{
+        margin-left: 210px;
+        width: 40%;
+        position: absolute;
+    }
+}
+
+@media screen and (max-width:650px){
+    .wrapper3{
+        height: 82.4vh;
+    }
+    .wrapper4{
+        height: 82.4vh;
+    }
+    .tab{
+        margin-left: 95px;
+        width: 60%;
+        position: absolute;
     }
 }
 
 @media screen and (max-width:450px){
     .wrapper3{
-        height: 73.6vh;
+        height: 88.35vh;
     }
     .wrapper4{
-        height: 73.6vh;
+        height: 88.35vh;
     }
     .connection{
-        margin-top: -110px;
+        margin-top: 0px;
     }
+
+    .tab{
+        width: 65%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* background-color: #F5F5DC; */
+        border-radius: 50px;
+        margin-left: 75px;
+        margin-top: 10px;
+        height: 40px;
+        box-shadow: 0px 2px 5px -2px #333;
+        position: absolute;
+        
+    }
+    
+    /* .tab-links{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        margin-top: 0px;
+        margin-left: 20px;
+        cursor: pointer;
+        text-align: center;
+        
+    }
+    
+    .tab-links li{
+        margin: 20px;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        cursor: pointer;
+        width: 70px;
+        height: 35px;
+        text-decoration: none;
+        box-shadow: 0px 2px 5px -2px #333;
+        /* text-shadow: 0px -1px #333; */
+        /* border-radius: 50%; */
+        /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif */
+    /* }  */
+    
 }
