--- a/src/pages/today/Today.css
+++ b/src/pages/today/Today.css
@@ -108,10 +108,10 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 70.3vh;
-        margin: 1rem;
-        margin-top: 10px;
-        margin-left: 0px;
+        height: 82.4vh;
+        margin: 0%;
+        /* margin-top: 10px;
+        margin-left: 0px; */
     }
     .chart-today-kw{
         flex: 1;
@@ -139,18 +139,18 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        height: 84.2vh;
-        margin: 1rem;
-        margin-top: -50px;
-        margin-left: -5px;
-        margin-bottom: 20px;
+        height: 88.35vh;
+        margin: 0rem;
+        margin-top: 0px;
+        margin-left: 0px;
+        margin-bottom: 0px;
     }
 
     .chart-today-kw{
         flex: 1;
-        width: 380px;
+        width: 390px;
         display: flex;
-
+        margin-top: 30px;
         justify-content: center;
         align-items: center;
         margin: 0%;
@@ -160,7 +160,7 @@
 
     .chart-today-cost{
         flex: 1;
-        width: 380px;
+        width: 390px;
         display: flex;
         justify-content:center;
         align-items: center;
