--- a/src/pages/userlist/Userlist.css
+++ b/src/pages/userlist/Userlist.css
@@ -1,9 +1,11 @@
 .body {
     padding: 20px;
+    background-color:#191970;
   }
 
 .body h2{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
 }
   
   .table1 {
@@ -16,6 +18,7 @@
     width: 100%;
     border-collapse: collapse;
     margin-top: 15px;
+    margin-bottom: 55.91vh;
   }
   
   .table th, .table td {
@@ -25,9 +28,9 @@
 
 
   .bottombar{
-    position: absolute;
+    /* position: absolute; */
     margin: 0%;
-    /* margin-top: ; */
+    margin-top: 100px;
   }
   
  
