--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -47,18 +47,55 @@
 }
 
 /* .nav-bar-links li{ */
-
-@media screen and (max-width:850px){
+@media screen and (max-width:1150px){
+    .nav-bar{
+        width: 58%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #F5F5DC;
+        border-radius: 50px;
+        margin-left: 220px;
+        margin-top: 10px;
+        height: 40px;
+        box-shadow: 0px 2px 5px -2px #333;
+        position: absolute;
+    }
+    
     .nav-bar-links{
         display: flex;
         justify-content: center;
         align-items: center;
         list-style: none;
-        margin-right: 40px;
+        margin-top: 15px;
+        margin-left: -33px;
+        cursor: pointer;
+        text-align: center;
+        
     }
-
+    
     .nav-bar-links li{
-        margin:0.5rem 2rem;
+        margin: 20px;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        cursor: pointer;
+        width: 64px;
+        text-decoration: none;
+        color: #191970;
+        box-shadow: 0px 2px 5px -2px #333;
+        /* text-shadow: 0px -1px #333; */
+        border-radius: 50px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    }
+}
+
+
+@media screen and (max-width:850px){
+    .nav-bar{
+       width: 71%;
+       margin-left: 120px;
     }
 }
 
