--- a/src/pages/month/Month.css
+++ b/src/pages/month/Month.css
@@ -44,12 +44,12 @@
     }
 
     .chart-month-kw{
-        width: 500px;
+        width: 100%;
         padding: 1rem;
     }
 
     .chart-month-cost{
-        width: 500px;
+        width: 100%;
         padding: 1rem;
     }
 }
@@ -59,11 +59,11 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        height: 50vh;
+        height: 82.3vh;
         margin: 0rem;
-        margin-top: 90px;
-        margin-bottom: 3.8rem;
-        padding: 50px;
+        margin-top: 0px;
+        margin-bottom: 0rem;
+        /* padding: 50px; */
     }
 
     .chart-month-kw{
