--- a/src/pages/now/Home.css
+++ b/src/pages/now/Home.css
@@ -4,7 +4,8 @@
     justify-content:center;
     align-items: center;
     display: flex;
-    background-color:#191970;
+    background-color:#020239;
+
     /* position: absolute; */
     height: 64.19vh;
 }
@@ -48,7 +49,7 @@
     align-items: center;
     margin-top: 0px;
     /* background-color:yellow; */
-    background-color:#191970;
+    background-color:#020239;
     /* position: absolute; */
     margin: 0%;
 }
@@ -104,12 +105,14 @@
         height: 350px;
         padding: 2rem;
         margin-top: 40px;
+        margin-left: 280px;
     }
 
     .chart-now-cost{
         height: 350px;
         padding: 2rem;
         margin-top: 40px;
+        margin-right: 280px;
     }
 
     .bottom-3{
@@ -268,18 +271,20 @@
     }
 
     .chart-now-cost{
-        width: 400px;
-        margin-top: -50px;
+        width: 100%;
+        margin-top: -100px;
         align-items: center;
         justify-content: center;
         margin-bottom: 0px;
+        margin-right: 0px;
     }
 
     .chart-now-kw{
         margin-top: 0px;
-        width: 400px;
+        width: 100%;
         align-items: center;
         justify-content: center;
+        margin-left: 0px;
     }
 
     .page-bottom{
@@ -288,21 +293,25 @@
         justify-content: center;
         align-items: center;
         margin: 0%;
-        margin-top: 0px;
+        margin-top: -10px;
         flex-direction: column;
         
     }
     
     .page-bottom div{
         width: 100%;
-        margin-top: 5px;
-        margin-bottom: 10px;
+        margin-top: -20px;
+        margin-bottom: 24px;
         padding: 0px;
+        flex: 1;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .page-bottom .vol{
         width: 180px;
         flex: 1;
+        
     }
 
     .page-bottom .pow{
