--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,10 +14,26 @@
     
 } */
 
+
+.title .logo{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.title .logo img{
+    width: 70px;
+    margin-left: 20px;
+    /* padding-bottom: 5px; */
+}
+
+
 .title p{
     font-size: 25px;
-    margin-left: 20px;
+    margin-left: 100px;
+    margin-top: -60px;
     justify-content: center;
+    padding-bottom: 5px;
     color: #191970;
     align-items: center;
     display: flex;
@@ -136,11 +152,26 @@
 }
 
 @media screen and (max-width:450px) {
+    .title .logo{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    
+    .title .logo img{
+        width: 55px;
+        margin-left: 15px;
+        /* padding-bottom: 5px; */
+    }
+    
+    
     .title p{
-        padding: 5px;
         font-size: 20px;
-        margin-bottom: 0px;
-        font-weight: 540;
+        margin-left: 75px;
+        margin-top: -50px;
+        display: flex;
+        padding-bottom: 0px;
+        /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     }
 
     .app__navbar-smallscreen .hammenu{
