--- a/src/pages/userlist/Userlist.css
+++ b/src/pages/userlist/Userlist.css
@@ -18,7 +18,8 @@
     width: 100%;
     border-collapse: collapse;
     margin-top: 15px;
-    margin-bottom: 55.91vh;
+    margin-bottom: 49.7vh;
+    
   }
   
   .table th, .table td {
@@ -30,7 +31,8 @@
   .bottombar{
     /* position: absolute; */
     margin: 0%;
-    margin-top: 100px;
+    /* margin-top: 100px; */
+    position: fixed;
   }
   
  
