--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -46,16 +46,20 @@
     
 }
 
+
+
+
+
 /* .nav-bar-links li{ */
 @media screen and (max-width:1150px){
     .nav-bar{
-        width: 58%;
+        width: 55%;
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: #F5F5DC;
         border-radius: 50px;
-        margin-left: 220px;
+        margin-left: 265px;
         margin-top: 10px;
         height: 40px;
         box-shadow: 0px 2px 5px -2px #333;
@@ -94,8 +98,32 @@
 
 @media screen and (max-width:850px){
     .nav-bar{
-       width: 71%;
+       width: 70%;
        margin-left: 120px;
+    }
+
+    .nav-bar-links{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        margin-top: 15px;
+        margin-left: -33px;
+        cursor: pointer;
+    }
+    
+    .nav-bar-links li{
+        margin: 2px;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        width: 72px;
+        font-size: 14px;
+        box-shadow: 0px 2px 5px -2px #333;
+        /* text-shadow: 0px -1px #333; */
+        border-radius: 50px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     }
 }
 
@@ -107,9 +135,9 @@
         align-items: center;
         background-color: #F5F5DC;
         border-radius: 50px;
-        margin-left: 18px;
+        margin-left: 20px;
         margin-top: 10px;
-        height: 40px;
+        height: 35px;
         box-shadow: 0px 2px 5px -2px #333;
     }
 
@@ -119,7 +147,7 @@
         align-items: center;
         list-style: none;
         margin-top: 15px;
-        margin-left: 7px;
+        margin-left: -33px;
         cursor: pointer;
     }
     
@@ -174,7 +202,7 @@
     justify-content: center;
     cursor: pointer;
     width: 53px;
-    font-size: 12px;
+    font-size: 14px;
     box-shadow: 0px 2px 5px -2px #333;
     /* text-shadow: 0px -1px #333; */
     border-radius: 50px;
