--- a/src/pages/month/Month.css
+++ b/src/pages/month/Month.css
@@ -2,8 +2,8 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    background-color:#191970;
-    height: 82.52vh;
+    background-color:#05052a;
+    height: 79.3vh;
     margin: 0%;
 }
 
@@ -59,7 +59,7 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        height: 82.3vh;
+        height: 79vh;
         margin: 0rem;
         margin-top: 0px;
         margin-bottom: 0rem;
