--- a/src/pages/now/Homechart.css
+++ b/src/pages/now/Homechart.css
@@ -1,8 +1,38 @@
 .chart {
   position: relative;
-  border-radius: 5%;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  border-radius: 3%;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
   padding: 10px;
+  /* background-color: rgb(38, 37, 37); */
+  /* opacity: 50%; */
+  /* z-index: 1; */
+}
+
+.icon{
+    position: absolute;
+    margin-top: 105px;
+    margin-left: 127px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+/* .cc{
+  background-color: yellow;
+} */
+
+/* #container {
+    border: solid gold 1px;   
+    width: 400px;
+    height: 200px;
+    background:rgba(56,255,255,0.1);
+} */
+
+#box {
+    /* border: solid rgb(180, 246, 72) 1px; */
+    margin: 0px;
+    width: 300px;
+    height: 100px;
+    background:rgba(250, 250, 248, 0.05);
 }
 
 /* Add shadow only outside of the chart */
@@ -14,8 +44,8 @@
   right: 0;
   bottom: 0;
   border-radius: 50%;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Adjust the shadow size and color */
-  z-index: -1;
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.5); /* Adjust the shadow size and color */
+  /* z-index: -1; */
 }
 
 #gaugeText {
