--- a/src/pages/today/Today.css
+++ b/src/pages/today/Today.css
@@ -2,9 +2,10 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    background-color:#191970;
-    height: 82.52vh;
+    background-color:#05052a;
+    height: 79.3vh;
     margin: 0%;
+    display: flex;
 }
 
 .chart-today-kw{
@@ -28,7 +29,7 @@
     align-items: center;
     margin: 0%;
     flex-direction: column;
-    padding: 5rem;
+    padding:5rem;
 }
 
 @media screen and (max-width:2000px){
@@ -59,7 +60,7 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        height: 82.3vh;
+        height: 79vh;
         margin: 0rem;
         margin-top: 0px;
         margin-bottom: 0rem;
@@ -144,6 +145,7 @@
         margin-top: 0px;
         margin-left: 0px;
         margin-bottom: 0px;
+        flex-direction: column;
     }
 
     .chart-today-kw{
