--- a/src/pages/week/Week.css
+++ b/src/pages/week/Week.css
@@ -2,9 +2,10 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    background-color:#191970;
-    height: 82.52vh;
+    background-color:#05052a;
+    height: 79.3vh;
     margin: 0%;
+    display: flex;
 }
 
 .chart-week-kw{
@@ -59,7 +60,7 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        height: 82.3vh;
+        height: 79vh;
         margin: 0rem;
         margin-top: 00px;
         margin-bottom: 0rem;
