--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,32 +1,43 @@
-
 .nav-bar{
-    width: 40%;
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    background-color: #F5F5DC;
-    border-radius: 50px;
-    margin-left: 450px;
+    /* background-color: #F5F5DC; */
+    /* border-radius: 50px; */
+    margin-left: 0px;
     margin-top: 10px;
-    height: 40px;
-    box-shadow: 0px 2px 5px -2px #333;
+    /* height: 40px; */
+    /* box-shadow: 0px 2px 5px -2px #333; */
     position: absolute;
 }
 
-.nav-bar-links{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    margin-top: 15px;
-    margin-left: -31px;
-    cursor: pointer;
-    text-align: center;
+.back{
+    background-color: white;
+    box-shadow: 0px 2px 5px -2px #333;
+    height: 40px;
+    border-radius: 50px;
+    /* width: 26.5%; */
+    /* width: 100%; */
     
 }
 
+.nav-bar-links{
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    margin-top: 2.5px;
+    padding: 2px 2px;
+    margin-left: 0px;
+    cursor: pointer;
+    text-align: center;
+    /* position: absolute; */
+}
+
 .nav-bar-links li{
-    margin: 20px;
+    /* padding: auto; */
     align-items: center;
     display: flex;
     justify-content: center;
@@ -50,7 +61,7 @@
 
 
 
-/* .nav-bar-links li{ */
+
 @media screen and (max-width:1150px){
     .nav-bar{
         width: 55%;
@@ -89,7 +100,6 @@
         text-decoration: none;
         color: #191970;
         box-shadow: 0px 2px 5px -2px #333;
-        /* text-shadow: 0px -1px #333; */
         border-radius: 50px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     }
@@ -98,8 +108,11 @@
 
 @media screen and (max-width:850px){
     .nav-bar{
-       width: 70%;
+       width: 68%;
        margin-left: 120px;
+       align-items: center;
+       justify-content: center;
+       display: flex;
     }
 
     .nav-bar-links{
@@ -113,7 +126,7 @@
     }
     
     .nav-bar-links li{
-        margin: 2px;
+        margin: 9px;
         text-align: center;
         align-items: center;
         justify-content: center;
@@ -121,7 +134,6 @@
         width: 72px;
         font-size: 14px;
         box-shadow: 0px 2px 5px -2px #333;
-        /* text-shadow: 0px -1px #333; */
         border-radius: 50px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     }
@@ -152,22 +164,19 @@
     }
     
     .nav-bar-links li{
-        margin: 2px;
+        margin: 2.5px;
         text-align: center;
         align-items: center;
         justify-content: center;
         cursor: pointer;
         width: 60px;
-        font-size: 12px;
+        font-size: 14px;
         box-shadow: 0px 2px 5px -2px #333;
-        /* text-shadow: 0px -1px #333; */
         border-radius: 50px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     }
 
-    /* .nav-bar-links li{
-        margin:0.5rem 0.5rem;
-    } */
+    
 }
 
 @media screen and (max-width:450px){
@@ -204,7 +213,7 @@
     width: 53px;
     font-size: 14px;
     box-shadow: 0px 2px 5px -2px #333;
-    /* text-shadow: 0px -1px #333; */
+    
     border-radius: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
