--- a/src/pages/custom/Custom.css
+++ b/src/pages/custom/Custom.css
@@ -65,6 +65,8 @@
         width: 100%;
         padding: 1rem;
     }
+
+
 }
 
 @media screen and (max-width:1150px) {
@@ -96,22 +98,46 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        margin: 0rem ;
-        height: 82.3vh;
+        height: 79vh;
+        margin: 0rem;
         margin-top: 0px;
-        margin-left: 0px;
+        display: flex;
+        flex-direction: column;
     }
 
     .chart-pick-kw{
-        width: 100%;
+        flex: 1;
+        width: 60%;
+        display: flex;
+        /* position: absolute; */
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
         padding: 1rem;
-        /* margin-top: 10px; */
-    }
+        margin-top: 80px;
+}
 
     .chart-pick-cost{
-        width: 100%;
+        flex: 1;
+        width: 60%;
+        display: flex;
+        /* position: absolute; */
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
         padding: 1rem;
-    }
+}
+
+.date{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 50%;
+    margin-top: -430px;
+    position: absolute;
+}
 }
 
 @media screen and (max-width:650px) {
@@ -120,7 +146,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 90vh;
+        height: 79.1vh;
         margin: 0rem;
         margin-top: 0px;
         margin-left: 0px;
@@ -134,6 +160,7 @@
         margin: 0%;
         margin-left: 0px;
         padding: 0rem;
+        margin-top: 60px;
 }
 
     .chart-pick-cost{
@@ -145,6 +172,7 @@
         margin: 0%;
         padding: 0rem;
         margin-left: 0px;
+        margin-top: -10px;
 }
 
     .date{
@@ -152,8 +180,8 @@
         justify-content: center;
         display: flex;
         width: 100%;
-        margin-top: -520px;
-        position: absolute;
+        margin-top: -440px;
+        /* position: absolute; */
     }
     
 }
