--- a/src/pages/month/Month.css
+++ b/src/pages/month/Month.css
@@ -96,10 +96,37 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        height: 82.3vh;
+        height: 79vh;
         margin: 0rem;
         margin-top: 0px;
+        display: flex;
+        flex-direction: column;
     }
+
+    .chart-month-kw{
+        flex: 1;
+        width: 65%;
+        display: flex;
+        /* position: absolute; */
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 1rem;
+        margin-top: 50px;
+}
+
+    .chart-month-cost{
+        flex: 1;
+        width: 65%;
+        display: flex;
+        /* position: absolute; */
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0%;
+        flex-direction: column;
+        padding: 1rem;
+}
 }
 
 @media screen and (max-width:650px){
@@ -108,7 +135,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 82.4vh;
+        height: 79.1vh;
         margin: 0%;
         /* margin-top: 10px;
         margin-left: 0px; */
@@ -139,7 +166,7 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        height: 88.35vh;
+        height: 86vh;
         margin: 0rem;
         margin-top: 0px;
         margin-left: 0px;
