--- a/src/pages/settings/Service.css
+++ b/src/pages/settings/Service.css
@@ -1,10 +1,20 @@
 .wrapper3{
-    height: 82.54vh;
+    height: 79.3vh;
     background-color:#191970;
 }
 
 .wrapper4{
-    height: 82.54vh;
+    height: 79.3vh;
+    background-color:#191970;
+}
+
+.wrapper5{
+    height: 79.3vh;
+    background-color:#191970;
+}
+
+.wrapper6{
+    height: 79.3vh;
     background-color:#191970;
 }
 
@@ -31,6 +41,29 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.budget{
+    width: 330px;
+    padding: 15px;
+    height: min-content;
+    border-radius: 5px;
+    background-color: rgb(186, 153, 217);
+    color: black;
+    margin-top: 0px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+.notification{
+    width: 400px;
+    padding: 15px;
+    height: min-content;
+    border-radius: 5px;
+    background-color: rgb(186, 153, 217);
+    color: black;
+    margin-top: 0px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .content{
     display: none;
 }
@@ -41,18 +74,26 @@
 
 
 .tab{
-    width: 20%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #F5F5DC;
-    border-radius: 50px;
-    margin-left: 590px;
-    margin-top: 10px;
-    height: 40px;
-    box-shadow: 0px 2px 5px -2px #333;
+    /* background-color: #F5F5DC; */
+    /* border-radius: 50px; */
+    margin-left: 0px;
+    margin-top: 0px;
+    /* height: 30px; */
+    /* box-shadow: 0px 2px 5px -2px #333; */
     position: absolute;
     
+}
+
+.back2{
+    background-color: white;
+    border-radius: 50px;
+    box-shadow: 0px 2px 5px -2px #333;
+    margin-top: 10px;
+    height: 45px;
 }
 
 .tab-links{
@@ -60,8 +101,8 @@
     justify-content: center;
     align-items: center;
     list-style: none;
-    margin-top: -2px;
-    margin-left: 20px;
+    margin-top: -15px;
+    /* margin-left: 20px; */
     cursor: pointer;
     text-align: center;
     border-radius: 50%;
@@ -74,7 +115,7 @@
     justify-content: center;
     text-align: center;
     cursor: pointer;
-    width: 70px;
+    width: 80px;
     height: 35px;
     text-decoration: none;
     box-shadow: 0px 2px 5px -2px #333;
@@ -85,15 +126,15 @@
 
 @media screen and (max-width:1150px){
     .wrapper3{
-        height: 82.2vh;
+        height: 79vh;
     }
     .wrapper4{
-        height: 82.2vh;
+        height: 79vh;
     }
 
     .tab{
-        margin-left: 325px;
-        width: 30%;
+        margin-left: 405px;
+        width: 25%;
         position: absolute;
     }
 }
@@ -129,10 +170,10 @@
 
 @media screen and (max-width:450px){
     .wrapper3{
-        height: 88.35vh;
+        height: 86vh;
     }
     .wrapper4{
-        height: 88.35vh;
+        height: 86vh;
     }
     .connection{
         margin-top: 0px;
