--- a/src/pages/userlist/Userlist.css
+++ b/src/pages/userlist/Userlist.css
@@ -7,6 +7,10 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
 }
+
+.bbttnn{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
   
   .table1 {
     width: 100%;
