changes in device setting

--- a/src/pages/userlist/Userlist.css
+++ b/src/pages/userlist/Userlist.css
@@ -33,10 +33,9 @@
 
 
   .bottombar{
-    /* position: absolute; */
     margin: 0%;
-    /* margin-top: 100px; */
     position: fixed;
+    z-index: 5;
   }
   
  
