--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -28,9 +28,9 @@
     justify-content: space-around;
     align-items: center;
     list-style: none;
-    margin-top: 2.5px;
+    margin-top: 0px;
     padding: 2px 2px;
-    margin-left: 0px;
+    margin: 2px 2px;
     cursor: pointer;
     text-align: center;
     /* position: absolute; */
@@ -44,6 +44,7 @@
     text-align: center;
     cursor: pointer;
     width: 64px;
+    margin: 0.5px 5px;
     text-decoration: none;
     color: #191970;
     box-shadow: 0px 2px 5px -2px #333;
